[gd_scene load_steps=4 format=3 uid="uid://cylcj8v5mnwnd"]

[ext_resource type="Script" path="res://entities/enemy/base_enemy.gd" id="1_y6anb"]
[ext_resource type="PackedScene" uid="uid://1pgcbnb74c65" path="res://entities/effects/explosion_sfx.tscn" id="2_40d2d"]
[ext_resource type="PackedScene" uid="uid://ccosq7xapjkvv" path="res://entities/damages/damage_receiver.tscn" id="2_fjvxx"]

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_y6anb")
die_effect = ExtResource("2_40d2d")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DamageReceiver" parent="." instance=ExtResource("2_fjvxx")]
collision_layer = 4
collision_mask = 0

[node name="ConditionalProcess" type="Node2D" parent="."]

[node name="DamageNumberPos" type="Marker2D" parent="."]
